force-app/main/default/objects/Vehicle__c/fields/Assigned_Driver__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee currently assigned to drive this vehicle.</description>
    <label>Assigned Driver</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Assigned Vehicles</relationshipLabel>
    <relationshipName>Assigned_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>