force-app/main/default/objects/Vehicle__c/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <label>Driver Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>