force-app/main/default/objects/Vehicle__c/fields/GPS_Insights_Id__c.field-meta.xml
<CustomField>
    <fullName>GPS_Insights_Id__c</fullName>
    <description>Unique vehicle identifier from GPS Insights.</description>
    <externalId>true</externalId>
    <label>GPS Insights Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>