force-app/main/default/objects/Vehicle__c/fields/GPS_Last_Seen__c.field-meta.xml
<CustomField>
    <fullName>GPS_Last_Seen__c</fullName>
    <label>GPS Last Seen</label>
    <type>DateTime</type>
</CustomField>