force-app/main/default/objects/Vehicle__c/fields/Last_GPS_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_GPS_Sync__c</fullName>
    <description>Timestamp of the most recent GPS Insights sync for this vehicle.</description>
    <label>Last GPS Sync</label>
    <type>DateTime</type>
</CustomField>