force-app/main/default/objects/Vehicle__c/fields/Last_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Last_Location_Address__c</fullName>
    <description>Reverse-geocoded street address for the latest position.</description>
    <label>Last Location Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>