force-app/main/default/objects/Vehicle__c/fields/Last_Location_Lat__c.field-meta.xml
<CustomField>
    <fullName>Last_Location_Lat__c</fullName>
    <description>Most recent latitude reported for this vehicle.</description>
    <label>Last Location Lat</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>