force-app/main/default/objects/Vehicle__c/fields/Last_Location_Lng__c.field-meta.xml
<CustomField>
    <fullName>Last_Location_Lng__c</fullName>
    <description>Most recent longitude reported for this vehicle.</description>
    <label>Last Location Lng</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>