force-app/main/default/objects/Vehicle__c/fields/Last_Location_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Location_Timestamp__c</fullName>
    <description>Timestamp of the most recent GPS position report.</description>
    <label>Last Location Timestamp</label>
    <type>DateTime</type>
</CustomField>