force-app/main/default/objects/Vehicle__c/fields/WEX_Vehicle_Id__c.field-meta.xml
<CustomField>
    <fullName>WEX_Vehicle_Id__c</fullName>
    <externalId>true</externalId>
    <label>WEX Vehicle ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>